<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/exitGame"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="159dp"
        android:layout_height="50dp"
        android:layout_marginBottom="28dp"
        android:layout_marginTop="33dp"
        android:background="@color/colorButton"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitGuess"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/submitGuess"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="163dp"
        android:layout_height="51dp"
        android:layout_marginBottom="109dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorButton"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrambleGuess"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/wordScrambleUID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@android:string/unknownName"
        android:textAlignment="center"
        android:textColor="?attr/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/scramble_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:text="@string/scramble"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wordScrambleUID"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/scrambleGame"
        android:layout_width="353dp"
        android:layout_height="93dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="90dp"
        android:fontFamily="monospace"
        android:gravity="center_vertical|center"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wordScrambleUID"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintHorizontal_bias="0.516" />

    <TextView
        android:id="@+id/clueGame"
        android:layout_width="315dp"
        android:layout_height="34dp"
        android:layout_marginEnd="34dp"
        android:layout_marginStart="34dp"
        android:fontFamily="cursive"
        android:gravity="center_vertical|center_horizontal"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.054"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintTop_toTopOf="@+id/clue_title" />

    <TextView
        android:id="@+id/clue_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clue"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintTop_toTopOf="@+id/wordScrambleUID"
        android:layout_marginTop="24dp"
        app:layout_constraintHorizontal_bias="0.502" />

    <EditText
        android:id="@+id/scrambleGuess"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:gravity="start|center_vertical"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrambleGame"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

</android.support.constraint.ConstraintLayout>
