...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/unsolvedWordScramblesList"
        android:layout_width="0dp"
        android:layout_height="409dp"
        android:layout_marginEnd="9dp"
        android:layout_marginStart="9dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
...
