...
        android:layout_height="148dp"
        android:layout_marginBottom="55dp"
        android:scaleType="fitCenter"
        android:tint="@color/colorAnalogous1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/solveWordScrambles"
        app:layout_constraintRight_toRightOf="@+id/solveWordScrambles"
        app:srcCompat="@android:drawable/ic_menu_info_details"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <ImageButton
...
        android:layout_marginTop="16dp"
        android:scaleType="fitCenter"
        android:tint="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/viewPlayerStatistics"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/createWordScramble"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.726"
        app:srcCompat="@android:drawable/ic_menu_edit"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

...
