...
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.197" />

    <Button
        android:id="@+id/okWordScrambleCreation"
        android:layout_width="180dp"
        android:layout_height="65dp"
        android:layout_marginBottom="84dp"
        android:background="@color/colorButton"
        android:onClick="returnToMainMenu"
        android:text="@android:string/ok"
...
